make things work on ios first , fix animation later

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -615,5 +615,10 @@ li#cart-trigger {
   }
 }
 
-
-
+.mobileAnimation{
+  -webkit-transition: height 2s ease-in-out;
+  -moz-transition: height 2s ease-in-out;
+  -ms-transition: height 2s ease-in-out;
+  -o-transition: height 2s ease-in-out;
+  transition: height 2s ease-in-out;
+}
